@@ -9,12 +9,6 @@ unit osencoding;
 // author: Rupert Roeder, detlef oertel
 // credits: http://www.opsi.org/credits/
 
-//***************************************************************************
-// Subversion:
-// $Revision: 503 $
-// $Author: oertel $
-// $Date: 2016-10-11 21:15:42 +0200 (Di, 11 Okt 2016) $
-//***************************************************************************
 
 
 {$mode delphi}
@@ -234,17 +228,17 @@ begin
   if LowerCase(sourceEncoding) = 'auto' then
     usedSourceEncoding := guessEncoding(sourceText);
   if supportedEncodings.IndexOf(usedSourceEncoding) = -1 then
-    logdatei.log_prog('Found or given Encoding: ' + usedSourceEncoding +
+    if Assigned(logdatei) then logdatei.log_prog('Found or given Encoding: ' + usedSourceEncoding +
       ' is not supported.', LLWarning);
   if LowerCase(usedSourceEncoding) <> LowerCase(destEncoding) then
   begin
-    logdatei.log_prog('Encodings are different so we have to reencode from ' + usedSourceEncoding +
+    if Assigned(logdatei) then logdatei.log_prog('Encodings are different so we have to reencode from ' + usedSourceEncoding +
       ' to ' + destEncoding, LLDebug2);
     if (usedSourceEncoding = 'utf8') or (usedSourceEncoding = 'UTF-8') or
       (destEncoding = 'utf8') or (destEncoding = 'UTF-8') then
     begin
       // which should not happen if destEncoding=utf8
-      logdatei.log_prog('We encode directly from or to utf8.', LLDebug2);
+      if Assigned(logdatei) then logdatei.log_prog('We encode directly from or to utf8.', LLDebug2);
       (*
       if (usedSourceEncoding = 'utf16') or (usedSourceEncoding = 'UTF-16') or
       (destEncoding = 'utf16') or (destEncoding = 'UTF-16') then
@@ -265,8 +259,8 @@ begin
     if (lowercase(usedSourceEncoding) = 'unicode') then
     begin
       // which should not happen if destEncoding=utf8
-      logdatei.log_prog('We encode with charencstreams.', LLDebug2);
-      logdatei.log_prog('We encode line by line.', LLDebug2);
+      if Assigned(logdatei) then logdatei.log_prog('We encode with charencstreams.', LLDebug2);
+      if Assigned(logdatei) then logdatei.log_prog('We encode line by line.', LLDebug2);
         mylist := TStringList.Create;
         str := ConvertEncoding(sourceText, usedSourceEncoding, 'utf8');
         mylist.Text := str;
@@ -275,20 +269,20 @@ begin
     end
     else
     begin
-      logdatei.log_prog('We encode via utf8.', LLDebug2);
-      logdatei.log_prog('Encodings are different so we have to reencode from ' + usedSourceEncoding +
+      if Assigned(logdatei) then logdatei.log_prog('We encode via utf8.', LLDebug2);
+      if Assigned(logdatei) then logdatei.log_prog('Encodings are different so we have to reencode from ' + usedSourceEncoding +
       ' to ' + destEncoding, LLDebug2);
       if (usedSourceEncoding = 'ucs2be') or (usedSourceEncoding = 'UCS-2BE')
         or (usedSourceEncoding = 'ucs2le') or (usedSourceEncoding = 'UCS-2LE')then
       begin
-        logdatei.log_prog('We encode line by line.', LLDebug2);
+        if Assigned(logdatei) then logdatei.log_prog('We encode line by line.', LLDebug2);
         mylist := TStringList.Create;
         mylist.Text := sourceText;
         for i := 0 to mylist.Count - 1 do
         begin
           str := mylist.Strings[i];
           mylist.Strings[i] := ConvertEncoding(str, usedSourceEncoding,'utf8');
-          logdatei.log_prog(usedSourceEncoding+' to utf8: '+str+' to '+mylist.Strings[i], LLDebug3);
+          if Assigned(logdatei) then logdatei.log_prog(usedSourceEncoding+' to utf8: '+str+' to '+mylist.Strings[i], LLDebug3);
         end;
         result := mylist.Text;
         mylist.Free;
@@ -296,13 +290,13 @@ begin
       else
       begin
         Result := ConvertEncoding(sourceText, usedSourceEncoding, 'utf8');
-        logdatei.log_prog(usedSourceEncoding+' to utf8: '+sourceText+' to '+Result, LLDebug3);
+        if Assigned(logdatei) then logdatei.log_prog(usedSourceEncoding+' to utf8: '+sourceText+' to '+Result, LLDebug3);
       end;
     end;
-    logdatei.log_prog('Reencoding from ' + usedSourceEncoding +
+    if Assigned(logdatei) then logdatei.log_prog('Reencoding from ' + usedSourceEncoding +
       ' to ' + destEncoding, LLDebug2);
   end
-  else logdatei.log_prog('Nothing to do: Reencoding from ' + usedSourceEncoding +
+  else if Assigned(logdatei) then logdatei.log_prog('Nothing to do: Reencoding from ' + usedSourceEncoding +
       ' to ' + destEncoding, LLDebug2);
 end;
 
