@@ -60,6 +60,8 @@ opsi-winst/opsi-script (4.12.1.0) experimental; urgency=low
 
   * osparser: new (undocumented) command 'setDebug_prog = (true/false)'
   * osshowsysinfo: caption is Systeminfo (instead of SystemInfo)
+  * reencode(paramstr(0),'system')
+  * remove some svn entries
 
 -- Detlef Oertel <d.oertel@uib.de>  Wed, 23 01 2019:15:00:00 +0200
 
